--- a/SASS/components/_container.scss
+++ b/SASS/components/_container.scss
@@ -1,10 +1,18 @@
 .container {
+  outline: 1px solid tomato;
   padding: 0 15px;
-  margin: 0 auto;
-  width: 1200px;
-}
-.page-header__container {
-  display: flex;
-  align-items: center;
-  justify-content: start;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    margin: 0 auto;
+  }
 }
