--- a/SASS/layout/_clients.scss
+++ b/SASS/layout/_clients.scss
@@ -1,17 +1,22 @@
 .company {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  margin: 0;
+  margin: -15px;
 }
 
 .company-item {
   color: var(--icon-primary-color);
-  &:not(:last-child) {
-    margin-right: 30px;
+  width: calc((100% - 2 * 30px) / 2);
+  margin: 15px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 90px) / 3);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 180px) / 6);
   }
 }
 .company-link {
-  width: 170px;
   height: 92px;
   display: flex;
   border: 1px solid var(--icon-primary-color);
