--- a/SASS/layout/_features.scss
+++ b/SASS/layout/_features.scss
@@ -1,19 +1,33 @@
 .features {
-  display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 .features-item {
-  width: 270px;
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    margin: 15px;
+    flex-basis: calc((100% - 60px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 120px) / 4);
+  }
 }
-.features-item + .features-item {
-  margin-left: 30px;
-}
+
 .features-icon {
   display: flex;
+
+  justify-content: center;
+  align-items: center;
   background-color: var(--grey-bg-color);
   border-radius: 4px;
   height: 120px;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 30px;
 }
 
@@ -23,6 +37,10 @@
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 .features-text {
   margin-bottom: 0;
