--- a/SASS/layout/_team.scss
+++ b/SASS/layout/_team.scss
@@ -1,24 +1,39 @@
-.team {
-  display: flex;
-}
 .comand {
   background-color: #f5f4fa;
 }
-.team-item + .team-item {
-  margin-left: 30px;
+.team {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
+
 .team-item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--white-color);
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    margin: 15px;
+    flex-basis: calc((100% - 60px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 120px) / 4);
+  }
 }
+
 .team-name {
   padding-top: 30px;
-  padding-bottom: 30px;
-}
-.team-link {
-  /* margin-bottom: 30px; */
+  padding-bottom: 24px;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 30px;
+  }
 }
 .team-title {
   margin-bottom: 10px;
@@ -28,7 +43,6 @@
   text-align: center;
 }
 .team-text {
-  /* margin-bottom: 30px; */
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.2;
@@ -39,9 +53,12 @@
   display: flex;
   justify-content: center;
 }
-.team-soc-item + .team-soc-item {
-  margin-left: 10px;
+.team-soc-item {
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
+
 .team-soc-link {
   width: 44px;
   height: 44px;
