--- a/SASS/layout/_footer.scss
+++ b/SASS/layout/_footer.scss
@@ -1,25 +1,45 @@
 .page-footer {
   padding: 60px 0;
   background-color: rgba(47, 48, 58, 1);
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
 }
 .container--arrange {
-  display: flex;
-  align-items: baseline;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 .wrapper-address {
-  margin-right: 70px;
-  flex-grow: 1;
+  // outline: 1px solid tomato;
+
+  // flex-grow: 1;
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
 }
 
 .address {
   font-style: normal;
+  margin-top: 20px;
 }
 
 .address__list {
-  margin-top: 20px;
 }
 .address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 9px;
+  }
 }
 .address__link {
   color: var(--secondary-white-color);
@@ -43,7 +63,14 @@
 /* -------------------присоединяйтесь --------*/
 
 .wrapper-soc {
-  margin-right: 93px;
+  // outline: 1px solid tomato;
+
+  @media screen and (max-width: 767px) {
+    margin: 60px 0;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+  }
 }
 .title-soc {
   font-weight: 700;
@@ -51,11 +78,11 @@
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--white-color);
+  margin-bottom: 20px;
 }
 
 .soc-list {
-  display: flex;
-  margin-top: 20px;
+  display: inline-flex;
 }
 .soc-list__item:not(:last-child) {
   margin-right: 10px;
@@ -77,6 +104,16 @@
 }
 
 /* ------------Подписка на рассылку-------------- */
+.subscription {
+  // outline: 1px solid tomato;
+  width: 100%;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-top: 60px;
+    width: 450px;
+  }
+}
+
 .subscription__label {
   font-weight: 700;
   font-size: 14px;
@@ -85,13 +122,14 @@
   color: var(--white-color);
 }
 .subscription__box {
-  display: flex;
-  align-items: baseline;
-  margin-top: 20px;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-top: 20px;
+  }
 }
 .subscription__input {
   height: 50px;
-  width: 358px;
+  width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -99,7 +137,6 @@
   padding: 15px 16px;
   background: #2f303a;
   outline: none;
-  margin-right: 12px;
   color: var(--white-color);
   &::placeholder {
     font-family: 'Roboto';
@@ -109,6 +146,12 @@
     line-height: 20px;
     letter-spacing: 0.03em;
     color: var(--secondary-white-color);
+  }
+  @media screen and (max-width: 1199px) {
+    margin: 20px 0;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 12px;
   }
 }
 
