--- a/css/main.css
+++ b/css/main.css
@@ -891,12 +891,26 @@ ul {
 
 .filter {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 25px;
+}
+@media screen and (min-width: 768px) {
+  .filter {
+    margin-bottom: 15px;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter {
+    margin-bottom: 35px;
+  }
 }
 
-.filter-item + .filter-item {
-  margin-left: 8px;
+.filter-item {
+  margin-bottom: 15px;
+}
+.filter-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .filter-button {
@@ -932,7 +946,17 @@ ul {
 
 .work-item {
   margin: 15px;
-  width: 370px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .work-item {
+    flex-basis: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work-item {
+    flex-basis: calc((100% - 90px) / 3);
+  }
 }
 
 .work-name {
@@ -940,6 +964,11 @@ ul {
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .work-name {
+    padding: 20px 24px 56px;
+  }
 }
 
 .work-title {
@@ -972,18 +1001,35 @@ ul {
 
 .work-top-text {
   position: absolute;
-  padding: 63px 24px;
+  padding: 77px 24px;
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 28px;
+  line-height: 1.55;
   letter-spacing: 0.03em;
   color: var(--white-color);
   transition: transform 250ms var(--cubic-bezier);
 }
 .work-link:hover .work-top-text, .work-link:focus .work-top-text {
   transform: translateY(-100%);
+}
+@media screen and (max-width: 479px) {
+  .work-top-text {
+    padding: 2px 4px;
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .work-top-text {
+    padding: 77px 24px;
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .work-top-text {
+    padding: 49px 24px 77px;
+  }
 }/*# sourceMappingURL=main.css.map */
