--- a/SASS/layout/_header.scss
+++ b/SASS/layout/_header.scss
@@ -6,12 +6,16 @@
   display: flex;
   align-items: center;
   justify-content: start;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-/*--------------------- nav-logo -----------*/
+/*--------------------- logo -----------*/
 .nav {
+  // outline: 1px solid tomato;
   display: flex;
   align-items: center;
+  display: none;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -28,13 +32,15 @@
 .logo__text--white {
   color: var(--white-color);
 }
-/* --------------------nav-links------------------ */
+/* --------------------nav------------------ */
 .site-nav {
   display: flex;
   margin-left: 93px;
 }
-.site-nav__item:not(:last-child) {
-  margin-right: 50px;
+.site-nav__item {
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .site-nav__link {
@@ -74,12 +80,13 @@
 
 /* ------------------contacts ------------*/
 .contacts {
+  // outline: 1px solid tomato;
   display: flex;
   margin-left: auto;
+  display: none;
 }
 
 .contacts__item {
-  margin-left: auto;
   &:not(:last-child) {
     margin-right: 50px;
   }
@@ -104,4 +111,9 @@
 
 .contacts__icon {
   margin-right: 10px;
+}
+.menu-open-button {
+  margin-left: auto;
+  border: none;
+  background-color: var(--white-color);
 }
