--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -8,6 +8,7 @@
 @import './components/section';
 @import './components/button';
 @import './components/modal';
+@import './components/mobile-menu';
 
 @import './layout/header';
 @import './layout/hero';
