--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   outline: 1px solid tomato;
   padding: 0 15px;
@@ -330,6 +334,102 @@ ul {
   padding: 10px 55px;
 }
 
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--white-color);
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  transform: translateX(100%);
+  transition: transform 250ms var(--cubic-bezier);
+}
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+
+.mobile-menu__container {
+  padding: 48px 0 48px 40px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: auto;
+  height: 100%;
+}
+
+.menu-close-button {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: var(--white-bg-color);
+  border-radius: 50%;
+  border: none;
+}
+
+.mobile-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+
+.mobile-nav__link--active {
+  color: var(--accent-color);
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-contacts__link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mobile-contacts__link--dark {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+
+.mobile-soc {
+  display: flex;
+}
+
+.mobile-soc__item {
+  padding: 0 10px;
+  border-left: 1px solid rgba(33, 33, 33, 0.2);
+}
+.mobile-soc__item:nth-child(1) {
+  padding-left: 0;
+  border-left: none;
+}
+
+.mobile-soc__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
 .page-header {
   border-bottom: 1px solid #ececec;
 }
@@ -338,12 +438,15 @@ ul {
   display: flex;
   align-items: center;
   justify-content: start;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-/*--------------------- nav-logo -----------*/
+/*--------------------- logo -----------*/
 .nav {
   display: flex;
   align-items: center;
+  display: none;
 }
 
 .logo {
@@ -363,7 +466,7 @@ ul {
   color: var(--white-color);
 }
 
-/* --------------------nav-links------------------ */
+/* --------------------nav------------------ */
 .site-nav {
   display: flex;
   margin-left: 93px;
@@ -409,11 +512,9 @@ ul {
 .contacts {
   display: flex;
   margin-left: auto;
+  display: none;
 }
 
-.contacts__item {
-  margin-left: auto;
-}
 .contacts__item:not(:last-child) {
   margin-right: 50px;
 }
@@ -436,6 +537,12 @@ ul {
 
 .contacts__icon {
   margin-right: 10px;
+}
+
+.menu-open-button {
+  margin-left: auto;
+  border: none;
+  background-color: var(--white-color);
 }
 
 .hero {
