--- a/SASS/components/_modal.scss
+++ b/SASS/components/_modal.scss
@@ -14,17 +14,25 @@
 
 .modal {
   position: absolute;
-  padding: 35px 40px 45px;
+  padding: 40px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(0);
-  min-width: 528px;
-  min-height: 581px;
+  width: 450px;
+  height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms, border-radius 250ms;
+
+  @media screen and (max-width: 449px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 1200px) {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 .modal-button {
   display: flex;
@@ -58,30 +66,31 @@
   font-family: 'Roboto';
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 12px;
   color: var(--primary-text-color);
+
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
 .form {
-  width: 448px;
-  /* outline: 1px solid tomato; */
+  // width: 448px;
+  // width: 370px;
+  outline: 1px solid tomato;
 }
 .form > ul {
   margin: 0;
+  margin-bottom: 10px;
 }
 .form-item {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
-  &:last-child {
-    margin-bottom: 0;
+  &:not(:last-child) {
+    margin-bottom: 10px;
   }
-}
-
-.form ul {
-  margin-bottom: 10px;
 }
 
 .form-box {
@@ -153,8 +162,8 @@
   justify-content: center;
   font-family: 'Roboto';
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   .checkbox-input:checked + & span {
@@ -164,14 +173,23 @@
   .checkbox-input:focus + & span {
     border-color: var(--accent-color);
   }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .checkbox-link {
   font-family: 'Roboto';
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .checkbox-icon {
