--- a/SASS/components/_container.scss
+++ b/SASS/components/_container.scss
@@ -1,5 +1,5 @@
 .container {
-  outline: 1px solid tomato;
+  // outline: 1px solid tomato;
   padding: 0 15px;
 
   @media screen and (min-width: 480px) {
