--- a/SASS/components/_modal.scss
+++ b/SASS/components/_modal.scss
@@ -28,11 +28,13 @@
 
   @media screen and (max-width: 449px) {
     width: 100%;
+    height: 100%;
   }
   @media screen and (min-width: 1200px) {
     min-width: 528px;
     min-height: 581px;
   }
+  overflow-y: auto;
 }
 .modal-button {
   display: flex;
@@ -79,7 +81,7 @@
 .form {
   // width: 448px;
   // width: 370px;
-  outline: 1px solid tomato;
+  // outline: 1px solid tomato;
 }
 .form > ul {
   margin: 0;
