--- a/SASS/components/_mobile-menu.scss
+++ b/SASS/components/_mobile-menu.scss
@@ -15,6 +15,7 @@
 }
 
 .mobile-menu__container {
+  // outline: 1px solid tomato;
   position: relative;
   display: flex;
   flex-direction: column;
