--- a/SASS/layout/_footer.scss
+++ b/SASS/layout/_footer.scss
@@ -129,7 +129,7 @@
 }
 .subscription__input {
   height: 50px;
-  width: 100%;
+  width: 450px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -147,16 +147,23 @@
     letter-spacing: 0.03em;
     color: var(--secondary-white-color);
   }
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
   @media screen and (max-width: 1199px) {
     margin: 20px 0;
   }
   @media screen and (min-width: 1200px) {
+    width: 358px;
     margin-right: 12px;
   }
 }
 
 .subscription__button {
   padding: 10px 27px;
+  @media screen and (min-width: 1200px) {
+    margin: 0;
+  }
 }
 .button__icon {
   margin-left: 10px;
